# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
advent_of_code/: __init__.py  __main__.py  constants.py  day_1.py  solutions.py  solutions.yaml
advent_of_code/day_1/: __init__.py  main.py  oop.py  optimal.py
advent_of_code/day_10/: README.md  __init__.py  oop.py
advent_of_code/day_11/: README.md  __init__.py  oop.py  optimal.py
advent_of_code/day_12/: README.md  __init__.py  oop.py
advent_of_code/day_13/: README.md  __init__.py  oop.py
advent_of_code/day_14/: README.md  __init__.py  oop.py  optimal.py
advent_of_code/day_15/: README.md  __init__.py  oop.py
advent_of_code/day_16/: README.md  __init__.py  graphs.py  oop.py
advent_of_code/day_17/: README.md  __init__.py  oop.py  optimal.py
advent_of_code/day_18/: README.md  __init__.py  optimal.py
advent_of_code/day_19/: __init__.py  oop.py  optimal.py
advent_of_code/day_2/: __init__.py  constants.py  main.py  oop.py  optimal.py
advent_of_code/day_20/: __init__.py  oop.py
advent_of_code/day_21/: __init__.py
advent_of_code/day_22/: README.md  __init__.py  optimal.py
advent_of_code/day_23/: __init__.py
advent_of_code/day_24/: README.md  __init__.py  optimal.py
advent_of_code/day_25/: README.md  __init__.py  optimal.py
advent_of_code/day_3/: README.md  __init__.py  constants.py  main.py  oop.py  optimal.py
docs/: dev-guide.md  hooks.py
profiler/: __init__.py  timer.py
tests/: test__solutions.py
utils/: geometry.py
(+249 files in other folders)
